--- a/index.html
+++ b/index.html
@@ -4,7 +4,26 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- HTML Meta Tags -->
+<title>Cambo-Store</title>
+<meta name="description" content="Cambo Store is a modern online shopping platform offering a wide range of products with convenient browsing, secure checkout, and fast delivery. Designed for seamless user experience, it provides easy access to quality products for everyday needs, tech gadgets, fashion, and more. Whether you’re looking for the latest trends or essential items, Cambo Store ensures a reliable and enjoyable online shopping experience for customers in Cambodia and beyond.">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://cambo-store.vercel.app">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Cambo-Store">
+<meta property="og:description" content="Cambo Store is a modern online shopping platform offering a wide range of products with convenient browsing, secure checkout, and fast delivery. Designed for seamless user experience, it provides easy access to quality products for everyday needs, tech gadgets, fashion, and more. Whether you’re looking for the latest trends or essential items, Cambo Store ensures a reliable and enjoyable online shopping experience for customers in Cambodia and beyond.">
+<meta property="og:image" content="https://opengraph.b-cdn.net/production/images/a269bafb-87fe-41a9-babe-16a15c700e63.png?token=f5aw6n2hMzuGv4dndjiEYgwJmxCxl9oJ4einQm0yEJc&height=500&width=500&expires=33291165718">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="cambo-store.vercel.app">
+<meta property="twitter:url" content="https://cambo-store.vercel.app">
+<meta name="twitter:title" content="Cambo-Store">
+<meta name="twitter:description" content="Cambo Store is a modern online shopping platform offering a wide range of products with convenient browsing, secure checkout, and fast delivery. Designed for seamless user experience, it provides easy access to quality products for everyday needs, tech gadgets, fashion, and more. Whether you’re looking for the latest trends or essential items, Cambo Store ensures a reliable and enjoyable online shopping experience for customers in Cambodia and beyond.">
+<meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/a269bafb-87fe-41a9-babe-16a15c700e63.png?token=f5aw6n2hMzuGv4dndjiEYgwJmxCxl9oJ4einQm0yEJc&height=500&width=500&expires=33291165718">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
